# C2RARS

./: CMakeLists.txt
examples/: 01_hello.asm  01_hello.c  02_arithmetic.asm  02_arithmetic.c  README.md
include/: ast.h  scanner.h
src/cli/: CMakeLists.txt  main.cpp
src/lexer/: CMakeLists.txt  lexer.l
src/parser/: CMakeLists.txt  parser.y
src/transformer/: CMakeLists.txt  transformer.cpp  transformer.h
src/utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
